# AI-Camp

./: .gitignore  README.md
1-ML/notebook/: LINEAR_AND_Logistic_REGRESSION.ipynb  ML_Explained.ipynb  Machine_Learning.ipynb
1-ML/project/: .dockerignore  Dockerfile  README.md  Streamlit.py  predict.py  pyproject.toml  train.py
1-NLP/: resources.txt
2-DL/Building-Neural-Network-from-Scratch/: FeedForward.ipynb  Preprocessing.ipynb  final_test_set.csv  final_train_set.csv
2-DL/notebook/: pytorch_mnist_complete.ipynb  tensorflow_mnist_complete.ipynb
3-CV/: README.md  cnn_explained_pytorch.ipynb  pyproject.toml
4-NLP/: NER.ipynb  README.md  resources.txt
5-LLM/: LLM_Systems_and_Applications.ipynb  README.md  pyproject.toml
5-LLM/Labs/: Agent.ipynb  RAG.ipynb  lesson_1.ipynb  pojects.ipynb
6-voice_agent/: README.md
6-voice_agent/English Voice Coach project/: .gitignore  README.md  requirements.txt
6-voice_agent/English Voice Coach project/backend/: README.md  __init__.py  config.py  main.py  prompts.py  requirements.txt  session_settings.py
6-voice_agent/English Voice Coach project/docs/: article.md
6-voice_agent/English Voice Coach project/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
6-voice_agent/English Voice Coach project/frontend/src/: main.tsx  styles.css  vite-env.d.ts
6-voice_agent/VisionTutor project/: README.md  report.md
6-voice_agent/VisionTutor project/backend/: pyproject.toml
6-voice_agent/VisionTutor project/backend/app/: __init__.py  bot.py  config.py  learning_tools.py  main.py  prompting.py  session_state.py
6-voice_agent/VisionTutor project/backend/app/processors/: __init__.py  answer_state_processor.py  error_fallback_processor.py  latest_frame_processor.py  tool_router_processor.py  vision_context_processor.py
6-voice_agent/VisionTutor project/backend/data/: student_memory.json
6-voice_agent/VisionTutor project/frontend/: index.html  package-lock.json  package.json
6-voice_agent/VisionTutor project/frontend/src/: App.tsx  styles.css
6-voice_agent/pipecat docs/: 1-Introduction to project.md  2-Voice Agent Fundamentals.md  3-Pipecat Core Concepts.md  4-Pipelines and Frames.md  5-stt-llm-tts.md  6-Context and Memory.md  7-WebRTC and Transport.md  8-Building the English Coach.md  9-Production Best Practices.md  glossary.md
(+19 files in other folders)
