[project]
name = "5-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.3",
    "groq>=0.37.1",
    "ipympl>=0.10.0",
    "ipython>=9.14.1",
    "langchain<1",
    "langchain-community<1",
    "langchain-core<1",
    "langchain-groq<1",
    "langchain-openai<1",
    "matplotlib>=3.11.0",
    "mplcursors>=0.7.1",
    "notebook>=7.6.0",
    "numexpr>=2.14.1",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pypdf>=6.13.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "unstructured>=0.23.1",
    "wikipedia>=1.4.0",
]
