[project]
name = "visiontutor-ai-backend"
version = "0.1.0"
description = "A Pipecat WebRTC visual voice tutor for students"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pillow>=10,<12",
  "pipecat-ai[openai,silero,webrtc]==1.4.0",
  "python-dotenv>=1.0,<2",
  "uvicorn[standard]>=0.30,<1",
]

[tool.uv]
package = false
